minor issues on admin side fixed

--- a/how_to_use.html
+++ b/how_to_use.html
@@ -15,14 +15,15 @@
     <ul>
       <li>
         <h2>Basic Explanation of the site</h2>
-        <p>This is a basic ecommerce template, with basic features of adding and displaying products.<br> It uses basic search to help user find the product.<br>'Type' is a table as you will learn below, which is used for categorizing the product. </p>
+        <p>This is a basic ecommerce template, with basic features of adding and displaying products.<br> It uses search to help user find the product.<br>'Type' is a table as you will learn below, which is used for categorizing the product. </p>
         <b>Please note that the template does not use 'Buy Now' option, instead it uses 'Check Availability' which leads to a Whatsapp Chat with the admin [sub-admin, or the one whose Phone number was specified]</b>
-        <p><b>Also note that 'Sub-admin' is not restricted, it will be covered in future updates!</b></p>
+        <p><b>Also note that 'Sub-admin' does not have restricted access, it will be covered in future updates!</b></p>
       </li>
       <li>
         <h2>Use of Database</h2>
         <ol>
-          <li>A ecommerce.sql file is included in the zip, you will have to create a database called 'ecommerce' and import the file into the database.</li>
+          <li>The database used for this project is phpMyAdmin [MySQL]</li>
+          <li>An ecommerce.sql file is included in the folder, create a database called 'ecommerce' and import the file into the database.</li>
           <li>There are three tables in the database namely - admins, products and type.</li>
           <li><b>'admins'</b> table includes all the admin users' entries.</li>
           <li><b>'type'</b> table includes the name of types of products. For eg: Shoes, Mobiles, etc </li>
@@ -48,21 +49,9 @@
         <h2>Some conventions to be followed</h2>
         <ol>
           <li>The images uploaded should be preferably 512 x 384 px</li>
-          <li>The images should be in png format with white background (white or no background images will look better on site)</li>
+          <li>The images should be in png format with white background (white or no background images will look better!)</li>
         </ol>
-      </li>
-      <li>
-        <h2>Future Updates</h2>
-        <ul>
-          <li>Sub-admin is to be restricted to only specified actions</li>
-          <li>Use of tags to search a product</li>
-          <li>Integrate 'Buy' option if possible</li>
-        </ul>
       </li>
     </ul>
   </body>
 </html>
-The 'Only Basics' E-commerce template
-A simple and basic e-commerce template
-An admin panel to create and manage products
-Simple systematic page to view the products
